очень много, изминение профиля, метки вместе с терреториями, смена пароля, главный хидер и кучу остального дерьма

--- a/src/common/header/Header.scss
+++ b/src/common/header/Header.scss
@@ -1,10 +1,167 @@
 @import "../../Variables.scss";
 
 .header {
-  z-index: 1000;
-  min-height: 250px;
-  max-height: 250px;
-  height: 250px;
+  z-index: 10000 !important;
+  min-height: 75px;
+  max-height: 75px;
+  height: 75px;
   width: 100%;
-  background: linear-gradient(180deg, $color-5 0%, rgba(228, 0, 127, 0) 100%);
+  // background: linear-gradient(180deg, $color-5 0%, rgba(228, 0, 127, 0) 100%);
+  .menu {
+    input[type="checkbox"] {
+      display: none;
+    }
+    .content-menu {
+      width: auto;
+      height: auto;
+      .links {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-end;
+        align-items: center;
+        transition: all 0.15s ease;
+        z-index: 150;
+        .links-li {
+          position: relative;
+          display: flex;
+          text-align: center;
+          list-style: none;
+          height: 40px;
+          line-height: 40px;
+          min-width: 240px;
+          max-width: 240px;
+          margin-left: 17px;
+          margin-right: 17px;
+          margin-top: 25px;
+          margin-bottom: 25px;
+          z-index: 5000 !important;
+          transition: all 0.35s ease;
+          &:hover {
+            border-radius: 10px;
+            background: $color-14;
+            border-radius: 12px;
+          }
+          a,
+          label {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            color: $color-3;
+            font-size: 26px;
+            font-weight: 400;
+            height: 100%;
+            width: 100%;
+            min-width: 220px;
+            text-decoration: none;
+            cursor: pointer;
+          }
+          label {
+            display: none;
+          }
+          .drop {
+            z-index: 6000;
+            position: absolute;
+            background: $color-21;
+            top: 0;
+            opacity: 0;
+            transition: all 0.2s ease-out;
+            visibility: hidden;
+            border-radius: 10px;
+            width: 100%;
+            height: auto;
+            padding: 5px;
+            .drop-li {
+              position: relative;
+              text-align: start;
+              padding: 3px;
+              margin: 3px;
+              transition: all 0.35s ease;
+              &:hover {
+                border-radius: 10px;
+                background: $color-14;
+                border-radius: 12px;
+              }
+              a {
+                width: auto;
+                font-size: 20px;
+                line-height: 24px;
+                height: 24px;
+                margin: 10px;
+              }
+            }
+            .ico-pl-li {
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              height: auto;
+              width: 100%;
+              .ico-player {
+                width: 30px;
+                height: 30px;
+                margin: auto 0;
+              }
+              .ico-name-player {
+                color: $color-4;
+                width: auto;
+                min-width: auto;
+                line-height: 24px;
+                height: 24px;
+                margin: 10px;
+                font-size: 20px;
+                overflow: hidden;
+                text-overflow: ellipsis;
+              }
+            }
+          }
+        }
+        li:hover > .drop {
+          top: 50px;
+          opacity: 1;
+          visibility: visible;
+          transition: all 0.35s ease;
+        }
+      }
+    }
+    #toggle {
+      width: 50px;
+      height: 50px;
+      // background: rgba(0, 0, 0, 0.8);
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: 0.3s ease;
+      display: none;
+      ::after {
+        content: "";
+        position: absolute;
+        width: 28px;
+        height: 2px;
+        background: #f7f7f7;
+        transition: 0.3s ease;
+        transform: translateY(10px);
+      }
+      ::before {
+        content: "";
+        position: absolute;
+        width: 28px;
+        height: 2px;
+        background: #f7f7f7;
+        transition: 0.3s ease;
+        transform: translateY(-10px);
+        box-shadow: 0 10px 0 #f7f7f7;
+      }
+    }
+    #toggle.active {
+      // background: rgba(0, 0, 0, 0.7);
+      background: rgba(48, 52, 73, 0.95);
+      ::after {
+        transform: translateY(0px) rotate(-45deg);
+      }
+      ::before {
+        transform: translateY(0px) rotate(45deg);
+        box-shadow: 0 0 0 #f7f7f7;
+      }
+    }
+  }
 }
