--- a/src/modules/components/auth-comp/Auth-comp.scss
+++ b/src/modules/components/auth-comp/Auth-comp.scss
@@ -47,11 +47,9 @@
   max-width: 1600px;
   height: auto;
   margin-bottom: 50px;
-  margin-top: 0;
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
-  position: relative;
-  top: -175px;
   z-index: 2000;
   .error {
     bottom: 25px;
@@ -82,7 +80,7 @@
         line-height: 50px;
         color: $color-3;
         font-size: 26px;
-        font-weight: 600;
+        font-weight: 400;
         margin-bottom: 15px;
       }
       form {
@@ -121,7 +119,7 @@
             padding: 15px;
             background: transparent;
             font-size: 16px;
-            font-weight: 500;
+            font-weight: 400;
             color: $color-8;
             transition: all 0.5 ease;
             :active,
@@ -135,21 +133,6 @@
               padding: 15px;
             }
           }
-        }
-      }
-      .warn-block {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        width: auto;
-        height: 24px;
-        span {
-          padding-right: 7px;
-        }
-        .war-h4-auth {
-          height: 24px;
-          line-height: 24px;
-          color: $color-3;
         }
       }
     }
@@ -257,7 +240,7 @@
         padding: 5px;
         margin: 5px;
         font-size: 16px;
-        font-weight: 500;
+        font-weight: 400;
         width: auto;
         height: auto;
         label {
