--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -19,3 +19,7 @@ $color-17: #ffb400;
 $color-18: #ff4444;
 $color-19: #32cd32;
 $color-20: #47ffe9;
+
+$color-21: rgba(1, 22, 37, 1);
+$color-22: rgba(255, 255, 255, 0.1);
+$color-23: #FF6060;
