--- a/src/modules/components/change-password/Change-password.scss
+++ b/src/modules/components/change-password/Change-password.scss
@@ -1,1 +1,56 @@
 @import "../../../Variables.scss";
+
+.block-pass{
+ display: flex;
+ flex-direction: column;
+ width: 100%;
+ height: 100%;
+ padding-top: 50px;
+ .pass-h3{
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  font-weight: 400;
+  font-size: 20px;
+  text-align: center;
+  color: $color-3;
+ }
+ .input-pass{
+  width: 350px;
+  height: 45px;
+  line-height: 45px;
+  outline: none;
+  background: $color-7;
+  border: 0.5px solid $color-22;
+  border-radius: 5px;
+  transition: all 0.25s ease-in-out;
+  color: $color-8;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin: 0 auto;
+  margin-top: 20px;
+  &:hover,
+  &:focus,
+  &:active {
+   outline: none;
+  }
+ }
+ .bt-pass{
+  background-color: $color-14;
+  cursor: pointer;
+  transition: all 0.35s ease;
+  width: 250px;
+  height: 50px;
+  line-height: 50px;
+  font-weight: 400;
+  font-size: 20px;
+  margin: 0 auto;
+  margin-top: 20px;
+  color: $color-3;
+  border-radius: 15px;
+  border: none;
+  &:hover {
+   background: $color-4;
+  }
+ }
+}
