--- a/src/modules/components/mode/Mode.scss
+++ b/src/modules/components/mode/Mode.scss
@@ -40,7 +40,7 @@
     font-size: 22px;
     line-height: 27px;
     color: $color-3;
-    font-weight: 700px;
+    font-weight: 400;
     margin: auto 0;
   }
 }
