--- a/src/modules/pages/cab/Cab.scss
+++ b/src/modules/pages/cab/Cab.scss
@@ -3,7 +3,7 @@
 .main-cab {
  width: 100%;
  height: auto;
- background: url(../../../bases/assets/bg6.png);
+ background: url(../../../bases/assets/bg3_blur_4.png);
  background-position-x: center;
  background-attachment: fixed;
  background-repeat: no-repeat;
@@ -11,15 +11,13 @@
  position: relative;
  .box {
   width: 1500px;
-  height: auto;
-  min-height: 800px;
+  height: 800px;
   background: $color-11;
-  margin: 0 auto 50px auto;
-  top: -175px;
-  position: relative;
+  margin: 10px auto 50px auto;
   padding: 50px;
   display: flex;
   flex-direction: row;
+  z-index: 1500 !important;
   .col-1 {
    width: 350px;
    display: flex;
@@ -29,6 +27,32 @@
    border-right-style: solid;
    border-left-style: solid;
    border-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), $color-3, rgba(0, 0, 0, 0)) 1 100%;
+   .player-box {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    max-width: 350px;
+    padding-bottom: 15px;
+    border-width: 1px;
+    border-bottom-style: solid;
+    border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color-3, rgba(0, 0, 0, 0)) 1 0%;
+    .img-player {
+     width: 100px;
+     height: 100px;
+     margin: 0 auto 10px auto;
+    }
+    .h5-name-player {
+     font-weight: 400;
+     font-size: 22px;
+     color: $color-3;
+     width: 100%;
+     height: 22px;
+     line-height: 22px;
+     text-align: center;
+    }
+   }
+
    .menu-cabinet {
     display: flex;
     flex-direction: column;
@@ -47,7 +71,7 @@
       transition: all 0.5s ease;
       width: 90%;
       height: 50px;
-      font-weight: 700;
+      font-weight: 400;
       font-size: 20px;
       line-height: 50px;
       margin: 2.5px;
