--- a/src/modules/components/my-profile/My-profile.scss
+++ b/src/modules/components/my-profile/My-profile.scss
@@ -77,7 +77,7 @@
      line-height: 26px;
      width: 50px;
      cursor: pointer;
-     color: $color-3;
+     color: $color-3;/*  */
      border: none;
      border-radius: 12px;
      background: transparent;
