--- a/src/modules/pages/faq/Faq.scss
+++ b/src/modules/pages/faq/Faq.scss
@@ -17,6 +17,9 @@
     height: auto;
     margin: 25px auto 0 auto;
     padding: 25px;
+    background: $color-11;
+    border: none;
+    border-radius: 7px;
     .h2-faq {
       color: $color-3;
       font-weight: 400;
@@ -25,102 +28,150 @@
       line-height: 35px;
       padding-left: 35px;
       margin-bottom: 25px;
+      text-align: center;
     }
-    .grid-wrapper {
+    .wrapper-tabs-faq {
       display: flex;
-      flex-wrap: wrap;
-      .card-faq {
-        width: auto;
-        min-width: 150px;
-        max-width: 450px;
-        height: auto;
-        min-height: 50px;
-        max-height: 280px;
+      flex-direction: row;
+      width: 100%;
+      margin: 0 auto;
+      padding: 15px;
+      .tabs {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        border: 0.5px solid $color-22;
-        border-radius: 15px;
-        padding: 15px;
-        margin: 15px;
-        background: $color-21;
-        .faq-label {
-          color: $color-8;
-          width: 100%;
-          font-weight: 400px;
-          height: 28px;
-          line-height: 28px;
-          margin-bottom: 8px;
-          border-width: 1px;
-          border-bottom-style: solid;
-          border-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color-22, rgba(0, 0, 0, 0)) 1 0%;
-        }
-        .faq-content {
-          display: flex;
-          width: auto;
-          height: auto;
+        width: auto;
+        height: 100%;
+        margin-right: 25px;
+        .btn-click {
+          cursor: pointer;
+          width: 200px;
+          height: 75px;
+          margin: 15px;
+          background: $color-21;
+          border: none;
+          border-radius: 5px; // box-shadow: -1px 3px 8px 5px $color-13, 2px 5px 16px 0px $color-13, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+          transition: all 0.5s ease-out;
           color: $color-3;
-          font-weight: 400;
-          font-size: 16px;
-          line-height: 18px;
+          &:hover {
+            color: white;
+            background: $color-22;
+          }
+          &:disabled {
+            background: $color-4;
+            color: white;
+          }
+        }
+      }
+      .content {
+        width: 100%;
+        margin: 15px;
+        padding: 20px;
+        .div-id-tab {
+          display: flex;
+          width: 100%;
+          height: 100%;
+          .tab-one {
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            min-height: 600px;
+            height: auto;
+            .title {
+              color: $color-3;
+              width: 100%;
+              height: 35px;
+              line-height: 35px;
+              font-weight: 400;
+              font-size: 24px;
+            }
+            .info {
+              color: $color-3;
+              width: 100%;
+              height: 35px;
+              line-height: 35px;
+              font-weight: 400;
+              font-size: 16px;
+            }
+            .lists {
+              display: flex;
+              flex-direction: column;
+              width: 100%;
+              height: 100%;
+              padding-top: 20px;
+              .list-one {
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                .one-input {
+                  position: absolute;
+                  left: -10000px;
+                  opacity: 0;
+                  z-index: -1;
+                }
+                .one-label {
+                  display: flex;
+                  justify-content: space-between;
+                  padding: 16px;
+                  margin-bottom: 5px;
+                  background: transparent;
+                  border: 0.5px solid $color-22;
+                  border-radius: 6px;
+                  color: $color-3;
+                  font-weight: 400;
+                  font-size: 16px;
+                  cursor: pointer;
+                  transition: all 0.25s ease;
+                  &:hover {
+                    background: $color-7;
+                  }
+                  &::after {
+                    content: "\276F";
+                    width: 16px;
+                    height: 16px;
+                    text-align: center;
+                    transition: all 0.35s;
+                  }
+                }
+                .one-content-h3 {
+                  width: 100%;
+                  max-height: 0;
+                  color: $color-3;
+                  font-weight: 400;
+                  font-size: 16px;
+                  background: $color-7;
+                  transition: all 0.25s ease;
+                  opacity: 0;
+                }
+              }
+            }
+          }
         }
       }
     }
   }
 }
 
-// .grid-wrapper {
-//   margin: 25px;
-//   display: grid;
-//     grid-template-columns: repeat(2, 1ft);
-//     grid-template-rows: repeat(1, 100px);
-//   grid-auto-flow: row dense;
-// }
-// .card-faq:nth-child(2n+1) {
-//   grid-column: span 2;
-//   grid-row: span 1;
-// }
-// .card-faq:nth-child(2n) {
-//   grid-column: span 1;
-//   grid-row: span 2;
-// }
-
-// @media (min-widht: 640px) {
-//   .grid-wrapper {
-//     display: grid;
-//     grid-template-columns: repeat(2, 1ft);
-//     grid-template-rows: repeat(5, 300px);
-//     grid-auto-flow: row dense;
-//   }
-
-//   .card-faq {
-//     margin: 10px;
-//   }
-//   .card-faq:first-child {
-//     grid-row: span 1;
-//   }
-//   .card-faq:nth-child(2) {
-//     grid-column: 2 / 3;
-//     grid-row: span 2;
-//   }
-//   .card-faq:nth-child(6),
-//   .card-faq:nth-child(8) {
-//     grid-row: span 2;
-//   }
-// }
-// @media (min-widht: 960px) {
-//   .grid-wrapper {
-//     grid-template-columns: repeat(5, 1ft);
-//     grid-template-rows: repeat(3, grid-auto-flow);
-//   }
-//   .card-faq:first-child,
-//   .card-faq:nth-child(7),
-//   .card-faq:nth-child(8) {
-//     grid-column: span 2;
-//     grid-row: span 1;
-//   }
-//   .card-faq:nth-child(2) {
-//     grid-column: span 2;
-//     grid-row: span 2;
-//   }
-// }
+.one-input:checked ~ .one-content-h3 {
+  opacity: 1 !important;
+  max-height: 100vh !important;
+  margin-bottom: 10px;
+  padding: 16px;
+  border-right: 0.5px solid $color-22;
+  border-left: 0.5px solid $color-22;
+  border-bottom: 0.5px solid $color-22;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+.one-input:checked ~ .one-label {
+  margin-bottom: 0px !important;
+  border-bottom-left-radius: 0px !important;
+  border-bottom-right-radius: 0px !important;
+  background: $color-7 !important;
+  color: $color-8 !important;
+  &::after {
+    transform: rotate(90deg);
+    color: $color-8;
+  }
+}
