--- a/src/index.scss
+++ b/src/index.scss
@@ -2,14 +2,11 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,900&display=swap");
 
-//
-// --------------------------------------------------
-//
+// ------------------------------
 
 @font-face {
   font-family: "Inter";
-  src: url("./font/Inter/Inter-Regular.woff2") format("woff2"),
-    url("./font/Inter/Inter-Regular.woff") format("woff");
+  src: url("./font/Inter/Inter-Regular.woff2") format("woff2"), url("./font/Inter/Inter-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -17,8 +14,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./font/Inter/Inter-Black.woff2") format("woff2"),
-    url("./font/Inter/Inter-Black.woff") format("woff");
+  src: url("./font/Inter/Inter-Black.woff2") format("woff2"), url("./font/Inter/Inter-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -35,8 +31,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./font/Inter/Inter-Bold.woff2") format("woff2"),
-    url("./font/Inter/Inter-Bold.woff") format("woff");
+  src: url("./font/Inter/Inter-Bold.woff2") format("woff2"), url("./font/Inter/Inter-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -53,8 +48,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./font/Inter/Inter-Medium.woff2") format("woff2"),
-    url("./font/Inter/Inter-Medium.woff") format("woff");
+  src: url("./font/Inter/Inter-Medium.woff2") format("woff2"), url("./font/Inter/Inter-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -62,8 +56,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./font/Inter/Inter-Light.woff2") format("woff2"),
-    url("./font/Inter/Inter-Light.woff") format("woff");
+  src: url("./font/Inter/Inter-Light.woff2") format("woff2"), url("./font/Inter/Inter-Light.woff") format("woff");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -71,8 +64,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./font/Inter/Inter-Thin.woff2") format("woff2"),
-    url("./font/Inter/Inter-Thin.woff") format("woff");
+  src: url("./font/Inter/Inter-Thin.woff2") format("woff2"), url("./font/Inter/Inter-Thin.woff") format("woff");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -80,8 +72,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./font/Inter/Inter-Regular.woff2") format("woff2"),
-    url("./font/Inter/Inter-Regular.woff") format("woff");
+  src: url("./font/Inter/Inter-Regular.woff2") format("woff2"), url("./font/Inter/Inter-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -89,31 +80,24 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./font/Inter/Inter-SemiBold.woff2") format("woff2"),
-    url("./font/Inter/Inter-SemiBold.woff") format("woff");
+  src: url("./font/Inter/Inter-SemiBold.woff2") format("woff2"), url("./font/Inter/Inter-SemiBold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 
-//
-// --------------------------------------------------
-//
+// ------------------------------
 
 @font-face {
   font-family: "Minecraft Title Cyrillic";
-  src: url("./font/MinecraftTitleCyrillic/Minecraft-Title-Cyrillic.woff")
-      format("woff2"),
-    url("./font/MinecraftTitleCyrillic/Minecraft-Title-Cyrillic.woff")
-      format("woff");
+  src: url("./font/MinecraftTitleCyrillic/Minecraft-Title-Cyrillic.woff") format("woff2"),
+    url("./font/MinecraftTitleCyrillic/Minecraft-Title-Cyrillic.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 
-//
-// --------------------------------------------------
-//
+// ------------------------------
 
 @font-face {
   font-family: "Minecraft Rus";
@@ -124,9 +108,7 @@
   font-display: swap;
 }
 
-//
-// --------------------------------------------------
-//
+// ------------------------------
 
 @font-face {
   font-family: "Minecraft Ten";
@@ -137,9 +119,7 @@
   font-display: swap;
 }
 
-//
-// --------------------------------------------------
-//
+// ------------------------------
 
 code {
   font-family: "Source Code Pro", monospace;
@@ -157,4 +137,23 @@ code {
 }
 .font-custom-3 {
   font-family: "Minecraft Ten";
+}
+
+@media only screen and (min-width: 1401px) and (max-width: 1600px) {
+}
+@media only screen and (min-width: 1281px) and (max-width: 1400px) {
+}
+@media only screen and (min-width: 1025px) and (max-width: 1280px) {
+}
+@media only screen and (min-width: 961px) and (max-width: 1024px) {
+}
+@media only screen and (min-width: 769px) and (max-width: 960px) {
+}
+@media only screen and (min-width: 641px) and (max-width: 768px) {
+}
+@media only screen and (min-width: 481px) and (max-width: 640px) {
+}
+@media only screen and (min-width: 361px) and (max-width: 480px) {
+}
+@media only screen and (min-width: 320px) and (max-width: 360px) {
 }
