--- a/src/modules/pages/faq/Faq.scss
+++ b/src/modules/pages/faq/Faq.scss
@@ -36,6 +36,7 @@
       width: 100%;
       margin: 0 auto;
       padding: 15px;
+      height: 650px;
       .tabs {
         display: flex;
         flex-direction: column;
@@ -50,9 +51,11 @@
           margin: 15px;
           background: $color-21;
           border: none;
-          border-radius: 5px; // box-shadow: -1px 3px 8px 5px $color-13, 2px 5px 16px 0px $color-13, 5px 5px 15px 5px rgba(0, 0, 0, 0);
+          border-radius: 5px;
           transition: all 0.5s ease-out;
-          color: $color-3;
+          color: $color-3;          
+          font-weight: 400;
+          font-size: 16px;
           &:hover {
             color: white;
             background: $color-22;
@@ -99,6 +102,8 @@
               width: 100%;
               height: 100%;
               padding-top: 20px;
+              overflow: auto;
+              padding-right: 15px;
               .list-one {
                 width: 100%;
                 height: 100%;
