--- a/src/common/header/Header.scss
+++ b/src/common/header/Header.scss
@@ -6,58 +6,90 @@
   max-height: 75px;
   height: 75px;
   width: 100%;
-  // background: linear-gradient(180deg, $color-5 0%, rgba(228, 0, 127, 0) 100%);
+
   .menu {
     input[type="checkbox"] {
       display: none;
     }
+
     .content-menu {
-      width: auto;
       height: auto;
+      width: 100%;
+      max-width: 1912px;
+      margin: 0 auto;
+
       .links {
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: center;
         align-items: center;
         transition: all 0.15s ease;
         z-index: 150;
+
         .links-li {
           position: relative;
           display: flex;
           text-align: center;
           list-style: none;
+          text-align: center;
           height: 40px;
           line-height: 40px;
-          min-width: 240px;
-          max-width: 240px;
+          width: auto;
+          min-width: 185px;
+          max-width: 220px;
           margin-left: 17px;
           margin-right: 17px;
           margin-top: 25px;
           margin-bottom: 25px;
           z-index: 5000 !important;
           transition: all 0.35s ease;
+
           &:hover {
             border-radius: 10px;
             background: $color-14;
-            border-radius: 12px;
           }
+
+          .title-logo {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            color: $color-3;
+            padding-left: 7px;
+            padding-right: 7px;
+            font-size: 20px !important;
+
+            .colored-title-span-1 {
+              color: $color-4;
+              overflow: hidden;
+              position: relative;
+            }
+
+            .colored-title-span-2 {
+              color: $color-1;
+              overflow: hidden;
+              position: relative;
+            }
+          }
+
           a,
           label {
             display: flex;
             flex-direction: column;
             justify-content: center;
             color: $color-3;
-            font-size: 26px;
+            font-size: 22px;
             font-weight: 400;
             height: 100%;
             width: 100%;
-            min-width: 220px;
+            min-width: 100px;
             text-decoration: none;
             cursor: pointer;
           }
+
           label {
             display: none;
           }
+
           .drop {
             z-index: 6000;
             position: absolute;
@@ -70,17 +102,20 @@
             width: 100%;
             height: auto;
             padding: 5px;
+
             .drop-li {
               position: relative;
               text-align: start;
               padding: 3px;
               margin: 3px;
               transition: all 0.35s ease;
+
               &:hover {
                 border-radius: 10px;
                 background: $color-14;
                 border-radius: 12px;
               }
+
               a {
                 width: auto;
                 font-size: 20px;
@@ -89,17 +124,20 @@
                 margin: 10px;
               }
             }
+
             .ico-pl-li {
               display: flex;
               flex-direction: row;
               justify-content: center;
               height: auto;
               width: 100%;
+
               .ico-player {
                 width: 30px;
                 height: 30px;
                 margin: auto 0;
               }
+
               .ico-name-player {
                 color: $color-4;
                 width: auto;
@@ -114,14 +152,30 @@
             }
           }
         }
-        li:hover > .drop {
+
+        .links-li-ho-hover:hover {
+          background: transparent !important;
+        }
+
+        .links-li:hover > .drop {
           top: 50px;
           opacity: 1;
           visibility: visible;
           transition: all 0.35s ease;
         }
+
+        .li-custom-right {
+          right: 0;
+          margin-right: auto;
+        }
+
+        .li-custom-left {
+          left: 0;
+          margin-left: auto;
+        }
       }
     }
+
     #toggle {
       width: 50px;
       height: 50px;
@@ -132,6 +186,7 @@
       align-items: center;
       transition: 0.3s ease;
       display: none;
+
       ::after {
         content: "";
         position: absolute;
@@ -141,6 +196,7 @@
         transition: 0.3s ease;
         transform: translateY(10px);
       }
+
       ::before {
         content: "";
         position: absolute;
@@ -152,16 +208,119 @@
         box-shadow: 0 10px 0 #f7f7f7;
       }
     }
+
     #toggle.active {
       // background: rgba(0, 0, 0, 0.7);
       background: rgba(48, 52, 73, 0.95);
+
       ::after {
         transform: translateY(0px) rotate(-45deg);
       }
+
       ::before {
         transform: translateY(0px) rotate(45deg);
         box-shadow: 0 0 0 #f7f7f7;
       }
     }
   }
+}
+
+
+@media screen and (max-width: 1600px) {
+  .header {
+    width: 100%;
+
+    .menu {
+
+      .content-menu {
+        width: 100%;
+        max-width: 1600px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1400px) {
+  .header {
+    width: 100%;
+
+    .menu {
+
+      .content-menu {
+        width: 100%;
+        max-width: 1400px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .header {
+    width: 100%;
+
+    .menu {
+
+      .content-menu {
+        width: 100%;
+        max-width: 1280px;
+
+        .links {
+
+          .links-li {
+            width: auto;
+            min-width: 185px;
+            max-width: 210px;
+            margin-left: 12px;
+            margin-right: 12px;
+            margin-top: 25px;
+            margin-bottom: 25px;
+
+            .title-logo {
+              padding-left: 5px;
+              padding-right: 5px;
+              font-size: 20px !important;
+            }
+
+            a,
+            label {
+              font-size: 20px;
+            }
+
+            .drop {
+              padding: 4px;
+
+              .drop-li {
+                padding: 1.5px;
+
+                a {
+                  font-size: 18px;
+                  line-height: 22px;
+                  height: 22px;
+                  margin: 7px;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
 }
