--- a/src/modules/components/world/World.scss
+++ b/src/modules/components/world/World.scss
@@ -6,6 +6,7 @@
   width: auto;
   max-width: 500px;
   min-width: 350px;
+
   .circle {
     display: flex;
     border: 5px solid $color-3;
@@ -14,6 +15,7 @@
     height: 27px;
     margin: 0 auto;
   }
+
   .world-name {
     width: 100%;
     height: 30px;
@@ -23,6 +25,7 @@
     color: $color-3;
     text-align: center;
   }
+
   .hr-90 {
     margin-left: auto;
     margin-top: 15px;
@@ -32,6 +35,7 @@
     height: 90px;
     border-left: 2px solid $color-3;
   }
+
   .world-img-text {
     display: flex;
     flex-direction: column;
@@ -42,12 +46,14 @@
     margin: 0 auto;
     display: flex;
     transition: all 0.8s ease;
+
     img {
       width: 325px;
       height: 325px;
       z-index: 2;
     }
   }
+
   .inf-text {
     width: auto;
     max-width: 300px;
@@ -68,7 +74,43 @@
     z-index: 1;
   }
 }
+
 .world-img-text:hover .inf-text {
   opacity: 1;
   top: 0;
+}
+
+@media screen and (max-width: 1280px) {
+  .worlds {
+    width: auto;
+    max-width: 400px;
+    min-width: 250px;
+
+    .circle {
+      width: 24px;
+      height: 24px;
+      border: 4px solid $color-3;
+    }
+
+    .world-name {
+      font-size: 26px;
+    }
+
+    .hr-90 {
+      height: 78px;
+    }
+
+    .world-img-text {
+      min-width: 300px;
+
+      img {
+        width: 300px;
+        height: 300px;
+      }
+    }
+
+    .inf-text {
+      font-size: 16px;
+    }
+  }
 }
