--- a/src/modules/pages/general/General.scss
+++ b/src/modules/pages/general/General.scss
@@ -3,6 +3,7 @@
 .main {
   display: flex;
   flex-direction: column;
+
   .row-1 {
     display: flex;
     flex-direction: column;
@@ -13,11 +14,13 @@
     display: flex;
     flex-direction: column;
     background: url(../../../bases/assets/bg4.png);
+
     .main-content {
       display: flex;
       flex-direction: column;
       height: 100%;
       width: 100%;
+
       .main-h1 {
         margin-top: 225px;
         margin-left: auto;
@@ -29,12 +32,14 @@
         font-weight: 400;
         font-size: 110px;
         color: $color-3;
+
         .colored-title-span-1 {
           color: $color-4;
           font: inherit;
           overflow: hidden;
           position: relative;
         }
+
         .colored-title-span-2 {
           color: $color-1;
           font: inherit;
@@ -42,6 +47,7 @@
           position: relative;
         }
       }
+
       .main-h3 {
         height: auto;
         width: auto;
@@ -52,6 +58,7 @@
         margin: 0 auto;
         color: $color-3;
       }
+
       .button-container {
         display: flex;
         flex-direction: row;
@@ -61,6 +68,7 @@
       }
     }
   }
+
   .row-2 {
     display: flex;
     flex-direction: column;
@@ -69,6 +77,7 @@
     background: $color-2;
     padding-top: 125px;
     padding-bottom: 100px;
+
     .content-info {
       display: flex;
       flex-direction: row;
@@ -76,11 +85,13 @@
       height: 600px;
       width: 100%;
       color: $color-3;
+
       .info-style {
         width: 50%;
         max-width: 550px;
         height: 100%;
         padding: 50px;
+
         .h2-info {
           font-weight: 400;
           font-size: 48px;
@@ -89,18 +100,23 @@
           margin-top: 35px;
           margin-bottom: 35px;
         }
+
         .h2-left {
           text-align: left;
         }
+
         .h2-right {
           text-align: right;
         }
+
         .h4-left {
           text-align: left;
         }
+
         .h4-right {
           text-align: right;
         }
+
         .h4-info {
           font-weight: 400;
           font-style: normal;
@@ -108,18 +124,26 @@
           line-height: 24px;
         }
       }
+
       .info-img {
         width: 50%;
         max-width: 550px;
         height: 100%;
         padding: 50px;
+
+        .info-img-wight {
+          width: 100%;
+          height: auto;
+        }
       }
     }
   }
+
   .row-3 {
     width: 100%;
     height: auto;
     background: url(../../../bases/assets/bg5.png);
+
     .tit-block {
       .title-h3 {
         width: auto;
@@ -132,6 +156,7 @@
         text-transform: uppercase;
         margin-bottom: 15px;
       }
+
       .title-h4 {
         height: auto;
         max-width: 550px;
@@ -141,8 +166,10 @@
         line-height: 20px;
         font-weight: 400;
         margin: auto;
+        font-size: 18px;
       }
     }
+
     .block-w {
       display: flex;
       flex-direction: row;
@@ -151,17 +178,19 @@
       min-height: 550px;
       max-height: 900px;
       height: auto;
-      transition: all 0.5 ease;
+      transition: all 0.5s ease;
       position: relative;
+
       .hover-me-block {
         position: absolute;
-        width: auto;
-        height: auto;
+        width: 500px;
+        height: 500px;
         left: 920px;
         top: 75px;
       }
     }
   }
+
   .row-4 {
     display: flex;
     flex-direction: column;
@@ -169,6 +198,7 @@
     width: 100%;
     height: auto;
     padding-top: 50px;
+
     .mode-title {
       text-align: center;
       width: 100%;
@@ -178,26 +208,150 @@
       font-size: 64px;
       color: $color-3;
     }
+
     .lin-bot-two {
       height: 200px;
       width: 100%;
       background: $color-7;
       background: linear-gradient(0deg, $color-7 0%, rgba(1, 22, 37, 0) 100%);
-      background: -webkit-linear-gradient(
-        0deg,
-        $color-7 0%,
-        rgba(1, 22, 37, 0) 100%
-      );
-      background: -moz-linear-gradient(
-        0deg,
-        $color-7 0%,
-        rgba(1, 22, 37, 0) 100%
-      );
+      background: -webkit-linear-gradient(0deg, $color-7 0%, rgba(1, 22, 37, 0) 100%);
+      background: -moz-linear-gradient(0deg, $color-7 0%, rgba(1, 22, 37, 0) 100%);
     }
   }
+
   .row-5 {
     width: 100%;
     height: 300px;
     background: $color-7;
   }
+}
+
+@media screen and (max-width: 1600px) {
+  .main {
+    .row-1 {
+      .main-content {
+        .main-h1 {
+          margin-top: 180px;
+        }
+      }
+    }
+
+    .row-3 {
+      .block-w {
+        .hover-me-block {
+          width: 400px;
+          height: 400px;
+          left: 750px;
+        }
+      }
+    }
+  }
+
+}
+
+@media screen and (max-width: 1400px) {
+  .main {
+    .row-1 {
+      .main-content {
+        .main-h1 {
+          margin-top: 170px;
+        }
+      }
+    }
+
+    .row-3 {
+      .block-w {
+        .hover-me-block {
+          width: 350px;
+          height: 350px;
+          left: 690px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .main {
+    .row-1 {
+      .main-content {
+        .main-h1 {
+          font-size: 100px;
+        }
+      }
+    }
+
+    .row-2 {
+      padding-top: 85px;
+      padding-bottom: 80px;
+
+      .content-info {
+        height: auto;
+        margin-bottom: 30px;
+
+        .info-style {
+          max-width: 500px;
+          padding: 40px;
+
+          .h2-info {
+            font-size: 44px;
+            height: 54px;
+            line-height: 54px;
+          }
+        }
+
+        .info-img {
+          max-width: 500px;
+          padding: 40px;
+
+        }
+      }
+    }
+
+    .row-3 {
+      .tit-block {
+        .title-h3 {
+          font-size: 54px;
+        }
+
+        .title-h4 {
+          font-size: 16px;
+        }
+      }
+
+      .block-w {
+        .hover-me-block {
+          width: 350px;
+          height: 350px;
+          left: 670px;
+        }
+      }
+    }
+
+    .row-4 {
+      padding-top: 45px;
+
+      .mode-title {
+        font-size: 54px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
 }
