--- a/src/App.scss
+++ b/src/App.scss
@@ -12,6 +12,7 @@ body {
 div#root {
   height: 100%;
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -42,25 +43,40 @@ div#root {
   background: $color-2;
   background: linear-gradient(180deg, $color-2 0%, rgba(228, 0, 127, 0) 100%);
   background: -webkit-linear-gradient(
-    180deg,
-    $color-2 0%,
-    rgba(228, 0, 127, 0) 100%
+                  180deg,
+                  $color-2 0%,
+                  rgba(228, 0, 127, 0) 100%
   );
   background: -moz-linear-gradient(
-    180deg,
-    $color-2 0%,
-    rgba(228, 0, 127, 0) 100%
+                  180deg,
+                  $color-2 0%,
+                  rgba(228, 0, 127, 0) 100%
   );
 }
+
 .lin-bot {
   height: 200px;
   width: 100%;
   background: $color-2;
   background: linear-gradient(0deg, $color-2 0%, rgba(1, 22, 37, 0) 100%);
   background: -webkit-linear-gradient(
-    0deg,
-    $color-2 0%,
-    rgba(1, 22, 37, 0) 100%
+                  0deg,
+                  $color-2 0%,
+                  rgba(1, 22, 37, 0) 100%
   );
   background: -moz-linear-gradient(0deg, $color-2 0%, rgba(1, 22, 37, 0) 100%);
+}
+
+.preloader-box {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  .preloader {
+    width: 100px;
+    height: 100px;
+    margin: 0 auto;
+  }
 }
