--- a/src/modules/components/my-markers/My-markers.scss
+++ b/src/modules/components/my-markers/My-markers.scss
@@ -128,6 +128,7 @@
           width: 125px;
           color: $color-3;
           background: $color-4;
+          text-decoration: none;
           text-align: center;
           border: none;
           border-radius: 5px;
@@ -155,7 +156,7 @@
   .colums-add-1 {
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 350px;
     height: 100%;
     margin-right: 15px;
     margin-top: 25px;
@@ -189,23 +190,27 @@
         font-size: 16px;
         font-weight: 400;
         outline: none !important;
-        padding: 5px;
+        padding: 7px;
         background: $color-7;
+        position: relative;
 
         &:hover,
         &:active,
         &:focus {
           outline: none;
         }
+      }
 
-        .option-list {
-          padding: 5px;
+      .option-list, rc-virtual-list-holder-inner {
+        padding: 5px;
+        background: #47ffe9;
+        color: $color-4;
+        z-index: 100000;
 
-          &:hover,
-          &:active,
-          &:focus {
-            outline: none;
-          }
+        &:hover,
+        &:active,
+        &:focus {
+          outline: none;
         }
       }
     }
@@ -219,7 +224,7 @@
       .block-row {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-start;
         width: 100%;
         height: auto;
         margin-bottom: 22px;
@@ -283,7 +288,9 @@
   }
 
   .colums-add-2 {
+    display: flex;
     width: 100%;
+    max-width: 750px;
     height: 100%;
     margin: 0 auto;
   }
