--- a/src/modules/pages/cab/Cab.scss
+++ b/src/modules/pages/cab/Cab.scss
@@ -81,6 +81,7 @@
         transition: all 0.5s ease;
         width: 90%;
         height: 50px;
+        text-decoration: none;
         font-weight: 400;
         font-size: 20px;
         line-height: 50px;
