--- a/src/common/header/Header.scss
+++ b/src/common/header/Header.scss
@@ -25,18 +25,19 @@
         align-items: center;
         transition: all 0.15s ease;
         z-index: 150;
+        width: 100%;
+        height: auto;
 
         .links-li {
           position: relative;
           display: flex;
           text-align: center;
           list-style: none;
-          text-align: center;
           height: 40px;
           line-height: 40px;
-          width: auto;
-          min-width: 185px;
-          max-width: 220px;
+          width: 100%;
+          min-width: 225px;
+          max-width: 225px;
           margin-left: 17px;
           margin-right: 17px;
           margin-top: 25px;
@@ -73,9 +74,6 @@
 
           a,
           label {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
             color: $color-3;
             font-size: 24px;
             font-weight: 400;
@@ -113,7 +111,6 @@
               &:hover {
                 border-radius: 10px;
                 background: $color-14;
-                border-radius: 12px;
               }
 
               a {
@@ -128,19 +125,20 @@
             .ico-pl-li {
               display: flex;
               flex-direction: row;
-              justify-content: center;
+              justify-content: start;
               height: auto;
               width: 100%;
 
               .ico-player {
+                display: flex;
                 width: 30px;
                 height: 30px;
-                margin: auto 0;
+                margin: auto 5px;
               }
 
               .ico-name-player {
                 color: $color-4;
-                width: auto;
+                width: 100%;
                 min-width: auto;
                 line-height: 24px;
                 height: 24px;
