--- a/src/modules/components/my-markers/My-markers.scss
+++ b/src/modules/components/my-markers/My-markers.scss
@@ -105,6 +105,8 @@
         .str-h3 {
           height: 40px;
           line-height: 40px;
+          font-size: 18px;
+          font-weight: 400;
           color: $color-3;
           width: 100%;
           padding-left: 15px;
