--- a/src/modules/components/my-prizes/My-prizes.scss
+++ b/src/modules/components/my-prizes/My-prizes.scss
@@ -98,6 +98,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
+    padding-right: 15px;
 
     .one-prizes {
       width: 100%;
