--- a/src/modules/components/my-markers/My-markers.scss
+++ b/src/modules/components/my-markers/My-markers.scss
@@ -159,9 +159,8 @@
     display: flex;
     flex-direction: column;
     width: 350px;
-    height: 100%;
+    height: 700px;
     margin-right: 15px;
-    margin-top: 25px;
 
     .input-name {
       width: auto;
