--- a/src/modules/pages/svg-list/Svg-list.scss
+++ b/src/modules/pages/svg-list/Svg-list.scss
@@ -6,7 +6,7 @@
   justify-content: flex-start;
   max-width: 100%;
   height: auto;
-  background: url(../../../bases/assets/bg4.png);
+  background: url(../../../bases/assets/Main-background.png);
   background-position-x: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
