--- a/src/modules/pages/admin-dashboard/Admin-dashboard.scss
+++ b/src/modules/pages/admin-dashboard/Admin-dashboard.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   width: auto;
   height: auto;
-  background: url(../../../bases/assets/bg4.png);
+  background: url(../../../bases/assets/Main-background.png);
   background-repeat: no-repeat;
   background-position-x: center;
   background-size: cover;
