адаптив для планшетов главной страницы

--- a/src/App.scss
+++ b/src/App.scss
@@ -80,3 +80,37 @@ div#root {
     margin: 0 auto;
   }
 }
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+  .lin-top {
+    height: 160px;
+  }
+
+  .lin-bot {
+    height: 160px;
+  }
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
+}
