--- a/src/common/header/Header.scss
+++ b/src/common/header/Header.scss
@@ -307,12 +307,73 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .header {
+    .menu {
+      .content-menu {
+        .links {
+          .links-li {
+            margin-left: 10px;
+            margin-right: 10px;
+            min-width: 160px;
+            max-width: 190px;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 960px) {
+  .header {
+    .menu {
+      .content-menu {
+        .links {
+          .links-li {
+            margin-left: 5px;
+            margin-right: 5px;
+            min-width: 150px;
+            max-width: 185px;
+
+            .custon-header {
+              .ico-name-player {
+                font-size: 16px !important;
+              }
+            }
+
+            .drop {
+              padding: 2.5px;
+
+              .drop-li {
+                a {
+                  font-size: 18px;
+                  margin: 5px;
+                }
+              }
+            }
+          }
+
+          .li-custom-left {
+            min-width: 200px !important;
+            max-width: 265px !important;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
+  .header {
+    .menu {
+      .content-menu {
+        .links {
+          .links-li {
+            display: none;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 640px) {
