--- a/src/modules/components/mode/Mode.scss
+++ b/src/modules/components/mode/Mode.scss
@@ -49,6 +49,11 @@
   }
 }
 
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
 
 @media screen and (max-width: 1280px) {
   .mode-block {
@@ -62,8 +67,65 @@
       border: 5px solid $color-1;
 
       h3 {
-        font-size: 38px;
+        font-size: 44px;
       }
     }
   }
+}
+
+@media screen and (max-width: 1024px) {
+  .mode-block {
+    .mode-name {
+      h3 {
+        font-size: 40px;
+      }
+    }
+
+    .circle {
+      margin: auto 45px;
+    }
+
+    .h4-mode {
+      font-size: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+  .mode-block {
+    width: 100%;
+    margin: 45px auto;
+
+    .mode-name {
+      border: 5px solid $color-1;
+      width: 275px;
+      height: 96px;
+
+      h3 {
+        font-size: 30px;
+      }
+    }
+
+    .circle {
+      width: 22px;
+      height: 22px;
+      margin: auto 25px;
+    }
+
+    .h4-mode {
+      font-size: 16px;
+    }
+  }
+}
+
+@media screen and (max-width: 640px) {
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
 }
