--- a/src/modules/pages/general/General.scss
+++ b/src/modules/pages/general/General.scss
@@ -247,7 +247,6 @@
       }
     }
   }
-
 }
 
 @media screen and (max-width: 1400px) {
@@ -340,12 +339,110 @@
 }
 
 @media screen and (max-width: 1024px) {
+  .main {
+    .row-1 {
+      .main-content {
+        .main-h1 {
+          margin-top: 180px;
+          font-size: 82px;
+        }
+
+        .main-h3 {
+          font-size: 22px;
+        }
+      }
+    }
+
+    .row-2 {
+      .content-info {
+        padding: 10px;
+
+        .info-style {
+          padding: 25px;
+        }
+
+        .info-img {
+          padding: 25px;
+        }
+      }
+    }
+
+    .row-3 {
+      .tit-block {
+        .title-h3 {
+          font-size: 54px;
+        }
+      }
+
+      .block-w {
+        .hover-me-block {
+          left: 530px;
+          width: 325px;
+          height: 325px;
+        }
+      }
+    }
+
+    .row-4 {
+      .lin-bot-two {
+        height: 150px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 960px) {
 }
 
 @media screen and (max-width: 768px) {
+  .main {
+    .row-2 {
+      .content-info {
+        .info-style {
+          padding: 10px;
+
+          .h2-info {
+            font-size: 38px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+          }
+
+          .h4-info {
+            font-size: 18px;
+          }
+        }
+
+        .info-img {
+          padding: 10px;
+        }
+      }
+    }
+
+    .row-3 {
+      .tit-block {
+        .title-h3 {
+          font-size: 46px;
+        }
+      }
+
+      .block-w {
+        flex-wrap: wrap;
+        max-height: none;
+
+        .hover-me-block {
+          left: 250px;
+          width: 325px;
+          height: 325px;
+        }
+      }
+    }
+
+    .row-4 {
+      .mode-title {
+        font-size: 46px;
+      }
+    }
+  }
 }
 
 @media screen and (max-width: 640px) {
