адаптив для экранов 640px

--- a/src/App.scss
+++ b/src/App.scss
@@ -107,6 +107,13 @@ div#root {
 }
 
 @media screen and (max-width: 640px) {
+  .lin-top {
+    height: 130px;
+  }
+
+  .lin-bot {
+    height: 130px;
+  }
 }
 
 @media screen and (max-width: 480px) {
