--- a/src/modules/components/button/Button.scss
+++ b/src/modules/components/button/Button.scss
@@ -51,3 +51,42 @@
   transition: all 0.85s ease-in-out;
   animation: shine 3s infinite ease;
 }
+
+@media screen and (max-width: 1600px) {
+}
+
+@media screen and (max-width: 1400px) {
+}
+
+@media screen and (max-width: 1280px) {
+}
+
+@media screen and (max-width: 1024px) {
+}
+
+@media screen and (max-width: 960px) {
+}
+
+@media screen and (max-width: 768px) {
+  .style-button {
+    width: 280px;
+    height: 70px;
+    line-height: 70px;
+    font-size: 28px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .style-button {
+    width: 250px;
+    height: 55px;
+    line-height: 55px;
+    font-size: 24px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+}
+
+@media screen and (max-width: 360px) {
+}
