--- a/src/modules/components/mode/Mode.scss
+++ b/src/modules/components/mode/Mode.scss
@@ -122,6 +122,32 @@
 }
 
 @media screen and (max-width: 640px) {
+  .mode-block {
+    flex-direction: column;
+    width: 100%;
+    margin: 45px auto 45px auto;
+
+    .mode-name {
+      margin: 0 auto;
+
+      .h3 {
+        font-size: 24px;
+      }
+    }
+
+    .circle {
+      width: 22px;
+      height: 22px;
+      margin: 15px auto;
+    }
+
+    .h4-mode {
+      width: 100%;
+      text-align: center;
+      padding-left: 75px;
+      padding-right: 75px;
+    }
+  }
 }
 
 @media screen and (max-width: 480px) {
