--- a/src/modules/pages/general/General.scss
+++ b/src/modules/pages/general/General.scss
@@ -13,7 +13,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background: url(../../../bases/assets/Main-background.png);
+    //background: url(../../../bases/assets/Main-background.png);
 
     .main-content {
       display: flex;
@@ -220,11 +220,6 @@
     }
   }
 
-  .row-5 {
-    width: 100%;
-    height: 300px;
-    background: $color-7;
-  }
 }
 
 @media screen and (max-width: 1600px) {
