fix header replace a to div, fix top pos scroll

--- a/src/common/header/Header.scss
+++ b/src/common/header/Header.scss
@@ -70,6 +70,7 @@
             }
           }
 
+          .replace,
           a,
           label {
             color: $color-3;
@@ -151,6 +152,7 @@
           background: transparent !important;
         }
 
+        .custon-header:hover > .drop,
         .links-li:hover > .drop {
           top: 50px;
           opacity: 1;
